# bertrand

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  index.html  main.js  package-lock.json  package.json  readme.md
example/: bertrand.yaml  index.html  main.js
example/content/: 404.md  index.md  introducing-bertrand.md  what-is-markdown.md
example/content/blog/: what-is-markdown.md
example/static/: style.css
example/templates/: 404.hbs  footer.hbs  header.hbs  index.hbs  main.hbs
src/: bertrand.rs  error.rs  fetch.rs  lib.rs  post.rs  state.rs  switch.rs
