[package]
name    = "bertrand"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow               = "1.0.43"
handlebars           = { version = "4.1", features = ["script_helper"] }
log                  = "0.4"
pulldown-cmark       = { version = "0.8.0", default-features = false }
rhai                 = { version = "1.0.3", features = ["wasm-bindgen"] }
serde                = { version = "1.0", features = ["derive"] }
serde_yaml           = "0.8"
wasm-bindgen         = { version = "^0.2", default-features = false }
wasm-bindgen-futures = "0.4"
wasm-logger          = "0.2.0"
yew                  = "0.18"
yew-router           = "0.15"
yewtil               = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "Node",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]


# TODO
#
# Running `wasm-opt` manually seems to significantly
# speed up the optimization.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
